Fixed UTF-8 encoding problem with command line unit tests
git-svn-id: http://foursquare-api-java.googlecode.com/svn/foursquare-api@285 3510f92a-767f-308a-6afb-0984ff0fccdf